syntax = "proto3";
option go_package = "pb";

message Node {
    uint64 id = 1;
    string bind = 2;
    Node pred = 3;
    Node succ = 4;
}

message ClosestPrecedingFingerRequest {
    uint64 id = 1;
}

message ClosestPrecedingFingerResponse {
    Node node = 1;
}

message JoinRingRequest {
    Node introducer = 1;
}

message JoinRingResponse {
}

message FindPredecessorRequest {
    uint64 id = 1;
}

message FindPredecessorResponse {
    Node node = 1;
}

message FindSuccessorRequest {
    uint64 id = 1;
}

message FindSuccessorResponse {
    Node node = 2;
}

message GetNodeInfoRequest {
}

message GetNodeInfoResponse {
    Node node = 1;
}

message UpdateFingerTableRequest {
    Node node = 1;
    int64 i = 2;
}

message UpdateFingerTableResponse {
}

service Chord {
    rpc GetNodeInfo (GetNodeInfoRequest) returns (GetNodeInfoResponse) {}

    rpc JoinRing (JoinRingRequest) returns (JoinRingResponse) {
    }

    rpc FindPredecessor (FindPredecessorRequest) returns (FindPredecessorResponse) {
    }

    rpc FindSuccessor (FindSuccessorRequest) returns (FindSuccessorResponse) {
    }

    rpc ClosestPrecedingFinger (ClosestPrecedingFingerRequest) returns (ClosestPrecedingFingerResponse) {
    }

    rpc UpdateFingerTable(UpdateFingerTableRequest) returns (UpdateFingerTableResponse) {
    }
}
